--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,5 +7,12 @@
   "observability": {
     "enabled": true,
     "head_sampling_rate": 1
-  }
+  },
+  "kv_namespaces": [
+    {
+      "binding": "OUTLINE_HOST",
+      "id": "<YOUR_KV_NAMESPACE_ID>",
+      "preview_id": "<YOUR_PREVIEW_KV_NAMESPACE_ID>"
+    }
+  ]
 }
